大量重构；简化了Maven artifactId；更新版本号；